--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 Changelog
 
+[v0.0.9] - 2024-12-03
+> Removed turret gear delay when first equipped
+> Improved peer-to-peer connection establishment
+> Bug Fixes:
+- Fixed players being instantly kicked when joining a room
+- Fixed players not being able to join a room with 4 or more players
+- Fixed non-existent rooms still appearing in the room list
+
 [v0.0.8] - 2024-07-22
 > Players now need to use a script to access the game instead of playing directly via URL
 > Removed the game's policy
